[gd_scene load_steps=3 format=3 uid="uid://bvnw1iq8ufmcy"]

[ext_resource type="Script" path="res://src/ui/camera_viewfinder.gd" id="1_camera_viewfinder"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frame"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.9, 0.9, 0.8)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CameraViewfinder" type="CanvasLayer"]
layer = 10
script = ExtResource("1_camera_viewfinder")

[node name="ViewfinderContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Frame" type="Panel" parent="ViewfinderContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -240.0
offset_right = 320.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_frame")

[node name="FilmCounter" type="Label" parent="ViewfinderContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "6/6"
horizontal_alignment = 2

[node name="CooldownBar" type="ProgressBar" parent="ViewfinderContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.01
show_percentage = false

[node name="FlashOverlay" type="ColorRect" parent="ViewfinderContainer"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)
